Fixed and broke a few things