@@ -24,14 +24,15 @@ public class Constants {
     public static final String JAV_CONFIG_URL = "http://oldschool.runescape.com/jav_config.ws";
     public static final String CODEBASE_PROPERTY = "codebase";
     public static final String INITIAL_JAR = "initial_jar";
-    public static final String OUTPUT_FILE_NAME = "gamepack.jar";
+    public static final String OUTPUT_FILE_NAME = "gamepack_vanilla.jar";
     public static final String INITIAL_CLASS = "initial_class";
-    public static final String GAMEPACK_OUTPUT_DIR = Paths.get(System.getProperty("user.dir"), "gamepack").toString();
-    public static final String DEOB_OUTPUT_JAR_PATH = Paths.get(System.getProperty("user.dir"), "gamepack") + File.separator+ "deob_gamepack.jar";
+    public static final String GAMEPACK_OUTPUT_DIR = Paths.get(System.getProperty("user.dir"), "gamepack") + File.separator;
+    public static final String DEOB_OUTPUT_JAR_PATH = GAMEPACK_OUTPUT_DIR + "gamepack_deobbed.jar";
 
-    public static final String DEOB_IN_PROGRESS_PATH = Paths.get(System.getProperty("user.dir"), "gamepack") + File.separator + "deob_gamepack.jar.part";
-    public static final String MAPPED_OUTPUT_JAR_PATH = Paths.get(System.getProperty("user.dir"), "gamepack") + File.separator+ "updated_gamepack.jar";
+    public static final String DEOB_IN_PROGRESS_PATH = GAMEPACK_OUTPUT_DIR + "deob_gamepack.jar.part";
+    public static final String MAPPED_OUTPUT_JAR_PATH = GAMEPACK_OUTPUT_DIR + "gamepack_renamed.jar";
 
-    public static final Path NAMES_JSON = Paths.get(System.getProperty("user.dir"), "gamepack", "names.json");
-    public static final String INJECTED_JAR_PATH = Paths.get(System.getProperty("user.dir"), "gamepack") + File.separator+ "injected_gamepack.jar";
+    public static final Path NAMES_JSON = Path.of(GAMEPACK_OUTPUT_DIR + "names.json");
+    public static final String INJECTED_JAR_PATH = GAMEPACK_OUTPUT_DIR + "gamepack_injected.jar";
+    public static final String VANILLA_GAMEPACK_DIR = GAMEPACK_OUTPUT_DIR + Constants.OUTPUT_FILE_NAME;
 }
